--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,10 @@
   "scripts": {
     "format": "prettier --write .",
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "npm-run-all --parallel watch:swagger start:dev",
+    "watch:swagger": "chokidar \"src/docs/**/*.yaml\" -c \"npm run bundle:swagger\"",
+    "bundle:swagger": "swagger-cli bundle ./src/docs/swagger.yaml --outfile dist/swagger.json --type json",
+    "start:dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -31,12 +34,15 @@
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "twilio": "^4.21.0",
-    "uuid": "^13.0.0"
+    "uuid": "^13.0.0",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
+    "chokidar-cli": "^3.0.0",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.6",
     "nodemon": "^3.1.10",
+    "npm-run-all": "^4.1.5",
     "prettier": "^3.6.2"
   },
   "lint-staged": {
