--- a/backend/src/docs/paths/auth.yaml
+++ b/backend/src/docs/paths/auth.yaml
@@ -1,4 +1,4 @@
-/auth/login:
+login:
   post:
     summary: Login with phone and password
     tags: [Auth]
@@ -24,7 +24,7 @@
       "401":
         $ref: "../responses/auth.yaml#/LoginInvalid"
 
-/auth/refresh:
+refresh:
   post:
     summary: Refresh access token
     tags: [Auth]
@@ -34,7 +34,7 @@
       "401":
         description: Missing or invalid refresh token
 
-/auth/logout:
+logout:
   post:
     summary: Logout user and clear refresh token cookie
     tags: [Auth]
@@ -44,7 +44,7 @@
       "400":
         description: No refresh token provided
 
-/auth/verification-email:
+verification-email:
   post:
     summary: Send email verification link
     tags: [Auth]
@@ -67,7 +67,7 @@
       "401":
         description: Missing or invalid access token
 
-/auth/verify-email:
+verify-email:
   get:
     summary: Verify email token
     tags: [Auth]
@@ -83,7 +83,7 @@
       "400":
         description: Missing token
 
-/auth/password-reset-request:
+password-reset-request:
   post:
     summary: Request password reset email
     tags: [Auth]
@@ -104,7 +104,7 @@
       "400":
         description: Missing email
 
-/auth/password-reset:
+password-reset:
   post:
     summary: Reset password
     tags: [Auth]
@@ -126,7 +126,7 @@
       "400":
         description: Missing token or newPassword
 
-/auth/oauth-url:
+oauth-url:
   get:
     summary: Get OAuth provider redirect URL
     tags: [Auth]
@@ -147,7 +147,7 @@
       "400":
         description: Missing provider
 
-/auth/{provider}/callback:
+oauth-callback:
   get:
     summary: OAuth callback handler
     tags: [Auth]
@@ -166,7 +166,7 @@
       "401":
         description: OAuth login failed
 
-/auth/complete-profile:
+complete-profile:
   post:
     summary: Complete user profile after OAuth signup
     tags: [Auth]
