--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
     "geolib": "^3.3.4",
     "i": "^0.3.7",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^7.0.0",
     "mongoose": "^8.19.2",
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
